# levi-ai-innovate

./: .env.example  .env.local  .env.production  .firebaserc  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .vercelignore  ALL.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DIAGNOSTICS_MASTER.md  DOCKER_MIGRATION.md  Dockerfile  Dockerfile (1).prod  Dockerfile.prod  FINAL_GRADUATION_WALKTHROUGH.md  GRADUATION_MASTER_REPORT.md  GRADUATION_REFINEMENT_WALKTHROUGH.md  HONEST_AUDIT.md  INTEGRATION.md  INVENTORY_REPORT.md  Intigration.MD  LAUNCH_MANIFEST.md  MAINTENANCE.md  MIGRATE_SOVEREIGN.ps1  Makefile  PERFORMANCE_BASELINE.md  Pulling  README.md  README_ARCHITECTURE.md  README_NEW.md  ROADMAP.md  RUNBOOK.md  Running  SECURITY.md  SECURITY_AUDIT_SCOPE.md  STRIPE_SETUP.md  (+131 more)
.do/: app.yaml
.firebase/: hosting.ZnJvbnRlbmQ.cache
.obsidian/: graph.json  workspace.json
app/: __init__.py  auth.py
artifacts/: verify_e2e.py
backend/: .env.sample  Dockerfile  Dockerfile.prod  Dockerfile.v8  Dockerfile.worker  README.md  __init__.py  agents.py  alembic.ini  app.py  auth.py  broadcast_utils.py  celery_app.py  circuit_breaker.py  config.py  content_engine.py  create_db.py  cron_daily_wisdom.py  db.py  email_service.py  embeddings.py  entrypoint.sh  firestore.indexes.json  firestore_db.py  fix_ui.py  gateway.py  gcp_jobs.py  generation.py  image_gen.py  kafka_client.py  learning.py  levi_cli.py  levi_v2.db.bak  main.py  main_legacy_backup.py  models.py  payments.py  quote_service.py  redis_client.py  requirements-video.txt  (+12 more)
backend/kernel/: Cargo.toml  Dockerfile  build_kernel.ps1  kernel_service.py  kernel_wrapper.py  serial_bridge.py
backend/kernel/bare_metal/: BOOTING.md  Cargo.toml  Makefile  bootloader.asm  rust-toolchain.toml
backend/kernel/bare_metal/.cargo/: config.toml
backend/kernel/bare_metal/src/: acpi.rs  ai_layer.rs  allocator.rs  ata.rs  cpu.rs  crypto.rs  dma.rs  elf_loader.rs  forensics.rs  fs.rs  fs_api.rs  gdt.rs  health.rs  interrupts.rs  journaling.rs  keyboard.rs  ksm.rs  main.rs  memory.rs  network.rs  nic.rs  orchestrator.rs  pci.rs  privilege.rs  process.rs  raft.rs  scheduler.rs  secure_boot.rs  self_healing.rs  serial.rs  shell.rs  shmem.rs  smp.rs  stability.rs  syscalls.rs  tcp.rs  tpm.rs  user_shell.rs  usermode.rs  vfs.rs  (+2 more)
backend/kernel/bare_metal/src/security/: mod.rs  redactor.rs
backend/kernel/bare_metal/src/task/: executor.rs  mod.rs
backend/kernel/src/: bft_signer.rs  bootloader.rs  dag_executor.rs  dispatcher_kernel.rs  filesystem.rs  gpu_controller.rs  intent_kernel.rs  ipc.rs  lib.rs  main.rs  memory_controller.rs  memory_kernel.rs  memory_paging.rs  micro_kernel.rs  network_stack.rs  process_manager.rs  scheduler.rs  security_monitor.rs  signals.rs  sovereign_executor.rs  stdlib.rs  syscalls.rs  wasm_executor.rs
backend/kernel/src/drivers/: mod.rs
backend/levi_runtime/: Cargo.toml
backend/levi_runtime/src/: lib.rs  main.rs
backend/levi_runtime/src/agents/: mod.rs  search_agent.rs  system_agent.rs
backend/levi_runtime/src/dcn/: mod.rs
backend/levi_runtime/src/evolution/: mod.rs
backend/levi_runtime/src/memory/: graph.rs  mod.rs
backend/levi_runtime/src/orchestrator/: mod.rs
backend/levi_runtime/src/plugins/: mod.rs
backend/levi_runtime/src/runtime/: daemon.rs  mod.rs
backend/levi_runtime/src/sandbox/: mod.rs
backend/levi_runtime/src/sdk/: mod.rs
backend/levi_runtime/src/task_engine/: mod.rs
backend/levi_runtime/src/tools/: automation.rs  mod.rs
backend/levi_runtime/src/wasm/: mod.rs
certs/: cert.pem  key.pem
database/: quotes.json
desktop/: backend.spec  backend_wrapper.py  package-lock.json  package.json
docs/: BRAIN.md  CHANGELOG.md  DCN_PEERING.md  DCN_SECRET_ROTATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.MD  DIAGNOSTICS_MASTER.md  INTEGRATION.md  LAUNCH_MANIFEST.md  MAINTENANCE.md  MASTERS.md  PRODUCTION_RUNBOOK.md  README.md  RUNBOOK.md  SECURITY.md  SRE_RUNBOOKS.md  TODO.md  pen_test_resolution.md
examples/: community_agent.py
frontend/: Dockerfile  README.md  admin.html  agents.html  auth.html  builder.html  chat.html  chat.js  dr.html  error.html  feed.html  hitl.html  index.html  inject_scripts.py  learning.html  manifest.json  marketplace.html  mobile_dash.html  monitor.html  my-gallery.html  observability.html  package-lock.json  package.json  pricing.html  privacy.html  quotes.html  reset-password.html  studio.html  style.css  success.html  sw.js  tailwind.config.js  terms.html  tsconfig.json  tsconfig.node.json  vite.config.js
frontend_react/: .env.production.local  package.json  tailwind.config.js
infrastructure/: README.md  registry_manifest.md
k6_reports/: k6_results_vus_10.json  k6_results_vus_100.json  k6_results_vus_50.json
levi-frontend/: fix_styles.py  index.html  package-lock.json  package.json  tailwind.config.js
marketplace/: manifest.json
mobile/: App.js  package.json
rasa/: Dockerfile  Dockerfile.actions  Dockerfile.server  actions.py  config.yml  domain.yml  nlu.yml  rules.yml  stories.yml
scratch/: final_mission_test.py  forensic_audit.py  verify_tasks.py
scripts/: backup_restore.py  benchmark_engine.py  bootstrap.py  build_boot_image.sh  deploy_sovereign.sh  e2e_smoke_test.py  fix_legacy_imports.py  flash_boot.py  forensic_audit.py  forensic_fuzzing.py  generate_keys.py  health_check.py  initialize_evolution.py  initialize_swarm.ps1  k6_load_test.js  kernel_bridge.py  launch.py  levi-cli.py  (+47 more)
(+1096 files in other folders)
