[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "levi-ai"
version = "15.0.0"
description = "Sovereign Cognitive Operating System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "pydantic[email]>=2.7.1,<3.0",
    "pynvml>=11.5.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "onnxruntime>=1.17.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
