[package]
name = "levi_kernel"
version = "17.0.0"
edition = "2021"

[lib]
name = "levi_kernel"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py310"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = "0.14"
hex = "0.4"
onnxruntime = "0.0.14"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
sysinfo = "0.30"
nvml-wrapper = "0.10.0"
ed25519-dalek = "2.0"
hmac = "0.12.1"
sha2 = "0.10"
libc = "0.2"
wasmer = "4.2.5"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
