[package]
name = "hal0-bare"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.9.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
