[package]
name = "hal0-bare"
version = "21.0.0"
edition = "2021"

[dependencies]
bootloader          = "0.9.8"
volatile            = "0.2.6"
spin                = "0.9.2"
x86_64              = "0.14.2"
uart_16550          = "0.2.0"
lazy_static         = { version = "1.4.0", features = ["spin_no_std"] }
pic8259             = "0.10.1"
pc-keyboard         = "0.7.0"
linked_list_allocator = "0.10.5"
crossbeam-queue     = { version = "0.3.8", default-features = false, features = ["alloc"] }
hkdf                = { version = "0.12.3", default-features = false }
sha2                = { version = "0.10.8", default-features = false }
ring                = { version = "0.17", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto   = true
codegen-units = 1
opt-level = "z"

# `bootimage build` will produce a bootable ISO image in target/
[package.metadata.bootimage]
run-args = ["-drive", "format=raw,file={}", "-serial", "mon:stdio", "-m", "512M"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
             "-display", "none"]
test-success-exit-code = 33

[features]
strict_hw = []
